made some more minor changes to lab5

--- a/lab5.ipynb
+++ b/lab5.ipynb
@@ -95,7 +95,7 @@
    "metadata": {},
    "source": [
     "- The most common ways to finetune language models are instruction-finetuning and classification finetuning\n",
-    "- Instruction-finetuning, depicted below, is the topic of the next chapter"
+    "- Instruction-finetuning, depicted below, is the topic of the next lab"
    ]
   },
   {
@@ -111,7 +111,7 @@
    "id": "a7f60321-95b8-46a9-97bf-1d07fda2c3dd",
    "metadata": {},
    "source": [
-    "- Classification finetuning, the topic of this chapter, is a procedure you may already be familiar with if you have a background in machine learning -- it's similar to training a convolutional network to classify handwritten digits, for example\n",
+    "- Classification finetuning, the topic of this lab, is a procedure you may already be familiar with if you have a background in machine learning -- it's similar to training a convolutional network to classify handwritten digits, for example\n",
     "- In classification finetuning, we have a specific number of class labels (for example, \"spam\" and \"not spam\") that the model can output\n",
     "- A classification finetuned model can only predict classes it has seen during training (for example, \"spam\" or \"not spam\"), whereas an instruction-finetuned model can usually perform many tasks\n",
     "- We can think of a classification-finetuned model as a very specialized model; in practice, it is much easier to create a specialized model than a generalist model that performs well on many different tasks"
@@ -644,7 +644,7 @@
     "  2. pad all messages to the length of the longest message in the dataset or batch\n",
     "\n",
     "- We choose option 2 and pad all messages to the longest message in the dataset\n",
-    "- For that, we use `<|endoftext|>` as a padding token, as discussed in chapter 2"
+    "- For that, we use `<|endoftext|>` as a padding token, as discussed in lab 1"
    ]
   },
   {
@@ -816,7 +816,7 @@
    "id": "20170d89-85a0-4844-9887-832f5d23432a",
    "metadata": {},
    "source": [
-    "- Next, we use the dataset to instantiate the data loaders, which is similar to creating the data loaders in previous chapters"
+    "- Next, we use the dataset to instantiate the data loaders, which is similar to creating the data loaders in previous labs"
    ]
   },
   {
@@ -954,7 +954,7 @@
    "id": "97e1af8b-8bd1-4b44-8b8b-dc031496e208",
    "metadata": {},
    "source": [
-    "- In this section, we initialize the pretrained model we worked with in the previous chapter\n",
+    "- In this section, we initialize a pretrained GPT-2 model\n",
     "\n",
     "<img src=\"https://sebastianraschka.com/images/LLMs-from-scratch-images/ch06_compressed/overview-2.webp\" width=700px>"
    ]
@@ -1539,7 +1539,7 @@
    "id": "fbbf8481-772d-467b-851c-a62b86d0cb1b",
    "metadata": {},
    "source": [
-    "- What's different compared to previous chapters is that it now has two output dimensions instead of 50,257"
+    "- What's different compared to previous labs is that it now has two output dimensions instead of 50,257"
    ]
   },
   {
@@ -1874,17 +1874,17 @@
    "id": "a013aab9-f854-4866-ad55-5b8350adb50a",
    "metadata": {},
    "source": [
-    "The `calc_loss_loader` is exactly the same as in chapter 5"
+    "The `calc_loss_loader` is exactly the same as in lab 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "b7b83e10-5720-45e7-ac5e-369417ca846b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Same as in chapter 5\n",
+    "# Same as in lab 4\n",
     "def calc_loss_loader(data_loader, model, device, num_batches=None):\n",
     "    total_loss = 0.\n",
     "    if len(data_loader) == 0:\n",
@@ -1969,7 +1969,7 @@
    "metadata": {},
    "source": [
     "- In this section, we define and use the training function to improve the classification accuracy of the model\n",
-    "- The `train_classifier_simple` function below is practically the same as the `train_model_simple` function we used for pretraining the model in chapter 5\n",
+    "- The `train_classifier_simple` function below is practically the same as the `train_model_simple` function we used for pretraining the model in lab 4\n",
     "- The only two differences are that we now \n",
     "  1. track the number of training examples seen (`examples_seen`) instead of the number of tokens seen\n",
     "  2. calculate the accuracy after each epoch instead of printing a sample text after each epoch"
@@ -2036,7 +2036,7 @@
    "id": "9624cb30-3e3a-45be-b006-c00475b58ae8",
    "metadata": {},
    "source": [
-    "- The `evaluate_model` function used in the `train_classifier_simple` is the same as the one we used in chapter 5"
+    "- The `evaluate_model` function used in the `train_classifier_simple` is the same as the one we used in lab 4"
    ]
   },
   {
